# Singularity

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CheckMemoryLeak.sh  DebugBuild.sh  README.md  ReleaseBuild.sh
Assets/: 3DShader.frag  3DShader.vert  3DShaderLight.frag  3DShaderLight.vert  Basic3DShaderLight.vert  BasicShader.frag  BasicTextureDS.frag  BasicTextureDSN.frag  BasicTextureDSN.vert  BasicTextureDS_Dir.vert  BoxLightShader.frag  BoxLightShader.vert  Compile.bat  Default.frag  Default.vert  HW1_Bunker_v02.mtl  LinuxCompile.sh  frag.spv  shader.frag  shader.vert  simpleShader.frag  simpleShader.vert  sphere.mtl  vert.spv
Assets/LightTesting/: BasicTextureDS_Dir.frag  BasicTextureDS_MultiLight.frag  (+2 more)
Core/: CMakeLists.txt
Core/dep/includes/glad/: glad.h
Core/dep/libs/assimp2/: CMakeLists.txt  DartConfiguration.tcl  assimp.pc  revision.h
Core/dep/libs/assimp2/contrib/zip/src/: miniz.h
Core/dep/libs/assimp2/contrib/zlib/: CTestTestfile.cmake  zlib.h  zlib.pc
Core/dep/libs/assimp2/doc/: dox.h
Core/dep/libs/assimp2/samples/DevIL/include/IL/: ilut_config.h
Core/dep/libs/assimp2/samples/SimpleOpenGL/: CMakeLists.txt
Core/dep/libs/assimp2/samples/SimpleTexturedOpenGL/: CMakeLists.txt
Core/dep/libs/assimp2/samples/SimpleTexturedOpenGL/SimpleTexturedOpenGL/src/: model_loading.cpp
Core/dep/libs/assimp2/samples/glut/: README-win32.txt
Core/dep/libs/assimp2/samples/glut/GL/: glut.h
Core/dep/libs/assimp2/test/: CMakeLists.txt  CTestTestfile.cmake
Core/dep/libs/assimp2/test/headercheck/: CTestTestfile.cmake
Core/dep/libs/assimp2/test/models/glTF2/BoxTextured-glTF/: BoxTextured.gltf
Core/dep/libs/assimp2/test/unit/: AbstractImportExportBase.cpp  AssimpAPITest.cpp  SceneDiffer.cpp  SceneDiffer.h  TestIOSystem.h  TestModelFactory.h  UTLogStream.h  ut3DImportExport.cpp  ut3DSImportExport.cpp  utACImportExport.cpp  utAMFImportExport.cpp  utASEImportExport.cpp  utAnim.cpp  utB3DImportExport.cpp  utBVHImportExport.cpp  utBatchLoader.cpp  utBlendImportAreaLight.cpp  utBlendImportMaterials.cpp  utBlenderImportExport.cpp  utBlenderIntermediate.cpp  utCSMImportExport.cpp  utColladaExportCamera.cpp  utColladaExportLight.cpp  utColladaImportExport.cpp  utD3MFImportExport.cpp  utDXFImporterExporter.cpp  utDefaultIOStream.cpp  utFBXImporterExporter.cpp  utFastAtof.cpp  utFindDegenerates.cpp  utFindInvalidData.cpp  utFixInfacingNormals.cpp  utGenNormals.cpp  utHMPImportExport.cpp  utIFCImportExport.cpp  utIOStreamBuffer.cpp  utIOSystem.cpp  utImporter.cpp  utImproveCacheLocality.cpp  utIssues.cpp  (+39 more)
Core/dep/libs/imgui/: CMakeLists.txt
Core/src/: Test.cpp  Test.h
Core/src/Layer/: Layer.h  TestLayer.cpp  TestLayer.h
Core/src/Managers/: ObjectManager.cpp  ObjectManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
Core/src/Rendering/: Rendering.h
Core/src/Rendering/Buffers/: VertexLayout.h
Core/src/Rendering/Lights/: DirectionalLight.cpp  DirectionalLight.h  Lights.cpp  Lights.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Core/src/Rendering/Material/: Material.h
Core/src/Rendering/Models/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Quad.cpp  Quad.h  iRenderable.h
Core/src/Rendering/Shaders/: Shader.cpp  Shader.h
Core/src/Rendering/Texture/: Texture.cpp  Texture.h
Core/src/Window/: Window.cpp  Window.h
Core/src/ext/ImGUI/: imgui_impl_opengl3.h
Core/src/ext/glad/: glad.c
ValgrindDebugScript/: Callgrind.sh  CheckMemoryLeak.sh  Massif.sh
(+4 files in other folders)
